infra/appset/default/plex/templates/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: plex.cdxker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-plex-media-server
            port: 
              number: 32400
